; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/ssl/extr_ssl_init.c_ssl_library_stop.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/ssl/extr_ssl_init.c_ssl_library_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stopped = common dso_local global i32 0, align 4
@ssl_base_inited = common dso_local global i64 0, align 8
@ssl_strings_inited = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ssl_library_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ssl_library_stop() #0 {
  %1 = load i32, i32* @stopped, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %14

4:                                                ; preds = %0
  store i32 1, i32* @stopped, align 4
  %5 = load i64, i64* @ssl_base_inited, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %4
  %8 = call i32 (...) @ssl_comp_free_compression_methods_int()
  br label %9

9:                                                ; preds = %7, %4
  %10 = load i64, i64* @ssl_strings_inited, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %9
  %13 = call i32 (...) @err_free_strings_int()
  br label %14

14:                                               ; preds = %3, %12, %9
  ret void
}

declare dso_local i32 @ssl_comp_free_compression_methods_int(...) #1

declare dso_local i32 @err_free_strings_int(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
